--- a/lecture_4/redux_combine_reducers/package.json
+++ b/lecture_4/redux_combine_reducers/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "IDF-debugging-example",
+  "name": "IDF-redux-combine-reducers",
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
