Fix example names in package.json

--- a/lecture_5/game_lobby_server_usage/package.json
+++ b/lecture_5/game_lobby_server_usage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "IDF-game-lobby-server-example",
+  "name": "IDF-game_lobby_server",
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
