--- a/lecture_5/async_process_with_middleware/package.json
+++ b/lecture_5/async_process_with_middleware/package.json
@@ -19,15 +19,15 @@
     "eslint-plugin-import": "2.0.1",
     "eslint-plugin-react": "6.4.1",
     "mocha": "^3.2.0",
-    "react-addons-test-utils": "^15.4.2",
+    "react-addons-test-utils": "~15.4.2",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.0"
   },
   "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "~15.4.2",
+    "react-dom": "~15.4.2",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
