--- a/lecture_5/async_process_with_middleware/package.json
+++ b/lecture_5/async_process_with_middleware/package.json
@@ -26,6 +26,10 @@
     "webpack-dev-server": "^2.4.0"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
+    "cors": "^2.8.3",
+    "express": "^4.15.2",
+    "node-uuid": "^1.4.8",
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
     "react-redux": "^5.0.3",
